# oae-data-protocol

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  config.public.mk  config.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml  vskit-config.yaml
AlkalinityFeedstockProcessing/: index.html
Dataset/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
DosingDeliveryType/: index.html
Experiment/: index.html
ExperimentType/: index.html
FeedstockType/: index.html
Float/: index.html
HydrologicLocation/: index.html
Intervention/: index.html
Jsonpath/: index.html
MCDRPathway/: index.html
ModelBGCComponent/: index.html
ModelComponent/: index.html
ModelGrid/: index.html
ModelPhysicsComponent/: index.html
ModelSimulation/: index.html
ModelType/: index.html
MonetaryGrant/: index.html
OAEProject/: index.html
OAETreatmentType/: index.html
ObservationType/: index.html
Permit/: index.html
PermitStatus/: index.html
Place/: index.html
PropertyValue/: index.html
String/: index.html
Uri/: index.html
Uriorcurie/: index.html
VerticalExtent/: index.html
about/: index.html
additional_details/: index.html
air_sea_co2_flux_parameterization/: index.html
alkalinity_feedstock_co2_removal_potential/: index.html
alkalinity_feedstock_description/: index.html
alkalinity_feedstock_form/: index.html
alkalinity_feedstock_processing/: index.html
alkalinity_feedstock_type/: index.html
arrangement/: index.html
box/: index.html
codebase/: index.html
(+190 files in other folders)
